<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ypw</string>

    <!-- screen name -->
    <string name="screen__wallet_name">Your Plasma Wallet</string>
    <string name="screen__payment_name">Payments</string>
    <string name="screen__new_payment_name">New Payment</string>
    <string name="screen__offer_name">Offers</string>
    <string name="screen__new_offer_name">New Offers</string>
    <string name="screen__qr_name">Scan QR Code</string>
    <string name="screen__offer_history_name">Histories</string>

    <!-- screen specific label -->
    <string name="login__sub_title_text">Welcome to Plasma Wallet\nLet\'s get started</string>
    <string name="login__button_label">Create New Wallet</string>

    <string name="payment__button_label">Add Payment</string>
    <string name="payment__address_label">To (Wallet ID)</string>
    <string name="payment__amount">Amount</string>
    <string name="payment__amount_scale">ETH</string>
    <string name="payment__button_send">Send</string>
    <string name="payment__dialog_confirm_title">Are you sure?</string>
    <string name="payment__dialog_confirm_message">Send %1$dETH to %2$s</string>
    <string name="payment__dialog_confirm_button_positive">SEND</string>
    <string name="payment__dialog_confirm_button_negative" tools:ignore="ButtonCase">CANCEL</string>
    <string name="payment__dialog_completed_title">Completed</string>
    <string name="payment__dialog_completed_message">Sent %1$dETH to %2$s</string>
    <string name="payment__dialog_completed_button_positive">OK</string>
    <string name="payment__text_hint">0</string>

    <string name="exchange__button_label">Add Offer</string>
    <string name="exchange__amount_text">%1$d%2$s</string>
    <string name="exchange__dialog_confirm_title">Are you sure?</string>
    <string name="exchange__dialog_confirm_message">Exchange %1$d%2$s to %3$d%4$s %5$s</string>
    <string name="exchange__dialog_confirm_button_positive">EXCHANGE</string>
    <string name="exchange__dialog_confirm_button_negative" tools:ignore="ButtonCase">CANCEL</string>
    <string name="exchange__dialog_completed_message">Completed</string>
    <string name="exchange__dialog_completed_button_positive">OK</string>

    <string name="new_offer__target_label">YOU</string>
    <string name="new_offer__text_hint">0</string>
    <string name="new_offer__source_label">WITH</string>
    <string name="new_offer__button_label" tools:ignore="ButtonCase">New Offer</string>
    <string name="new_offer__dialog_completed_title">Completed</string>
    <string name="new_offer__dialog_completed_message">%1$.1f %2$s with %3$.1f %4$s</string>
    <string name="new_offer__dialog_completed_button_positive">OK</string>

    <string name="offer_history__amount_with_scale">%1$d%2$s</string>

</resources>
