<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.login.LoginFragment">

    <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size__display4"
            app:layout_constraintBottom_toTopOf="@+id/sub_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    <TextView
            android:id="@+id/sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size__32"
            android:layout_marginBottom="@dimen/margin_size__32"
            android:text="@string/login__sub_title_text"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size__title"
            app:layout_constraintBottom_toTopOf="@+id/create_wallet_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
            android:id="@+id/create_wallet_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size__height"
            android:layout_margin="@dimen/margin_size__16"
            android:background="@drawable/button_main_background"
            android:text="@string/login__button_label"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_title_text" />

</androidx.constraintlayout.widget.ConstraintLayout>