<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.new_payment.NewPaymentFragment">

    <View
            android:id="@+id/top_space"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment__amount"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size__title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_space" />

    <EditText
            android:id="@+id/amount_text_field"
            style="@style/PaymentEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_size__8"
            android:paddingEnd="@dimen/padding_size__8"
            android:textSize="@dimen/text_size__headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_text"
            app:theme="@style/PaymentEditTextStyle" />

    <Spinner
            android:id="@+id/amount_scale_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size__8"
            android:layout_marginBottom="@dimen/margin_size__8"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@id/amount_text_field"
            app:layout_constraintStart_toEndOf="@+id/amount_text_field" />

    <View
            android:id="@+id/image_top_space"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_text_field" />

    <ImageView
            android:id="@+id/image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_send_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_top_space" />

    <View
            android:id="@+id/image_bottom_space"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
            android:id="@+id/target_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_size__8"
            android:paddingBottom="@dimen/padding_size__8"
            android:text="@string/payment__address_label"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toTopOf="@id/target_text"
            app:layout_constraintStart_toStartOf="@id/target_text" />

    <EditText
            android:id="@+id/target_text"
            style="@style/PaymentEditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size__32"
            android:layout_marginEnd="@dimen/margin_size__32"
            android:hint="0x123456789abcdef123456789"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_bottom_space"
            app:theme="@style/PaymentEditTextStyle" />

    <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size__height"
            android:layout_margin="@dimen/margin_size__16"
            android:background="@drawable/button_main_background"
            android:text="@string/payment__button_send"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/target_text" />

    <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#aa312934"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>