<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/padding_size__16"
        android:paddingEnd="@dimen/padding_size__16"
        tools:context=".ui.new_offers.NewOfferFragment">

    <View
            android:id="@+id/top_space"
            android:layout_width="0dp"
            android:layout_height="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/source_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_space">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_offer__target_label"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size__title" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/source_amount_text"
                    style="@style/PaymentEditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size__display1"
                    app:theme="@style/PaymentEditTextStyle" />

            <Spinner
                    android:id="@+id/source_scale_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_size__8" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_size__16"
            android:paddingBottom="@dimen/padding_size__16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_container">

        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_up_arrow" />

        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_down_arrow" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/target_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_offer__source_label"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size__title" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/target_amount_text"
                    style="@style/PaymentEditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size__display1"
                    app:theme="@style/PaymentEditTextStyle" />

            <Spinner
                    android:id="@+id/target_scale_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_size__8" />

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/offer_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size__height"
            android:layout_marginStart="@dimen/margin_size__16"
            android:layout_marginTop="@dimen/margin_size__32"
            android:layout_marginEnd="@dimen/margin_size__16"
            android:background="@drawable/button_main_background"
            android:text="@string/new_offer__button_label"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/target_container" />

    <View
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#aa312934"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>